feat: add redux, Catalog & Cart

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,7 +6,9 @@
 
 .main_container {
   width: 100%;
-  padding: 0 170px;
+  max-width: 923px;
+  margin: 0 auto;
+  //padding: 0 170px;
 }
 
 .page_container {
