--- a/src/widgets/Catalog/Catalog.module.scss
+++ b/src/widgets/Catalog/Catalog.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   padding-top: 21px;
+  width: 100%;
+  max-width: 705px;
+  align-items: flex-start;
 }
 
 .carts_block {
