feat: add AboutProductPage (SSR), FavoriteProducts with sliceFavoriteProducts

--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -3,6 +3,7 @@
   --line-height-s: 14px;
   --line-height-m: 16px;
   --line-height-l: 24px;
+  --line-height-xl: 27px;
 
   // font sizes
   --font-size-xs: 0.75rem; // 12px
