--- a/src/widgets/Catalog/Catalog.module.scss
+++ b/src/widgets/Catalog/Catalog.module.scss
@@ -7,6 +7,21 @@
   align-items: flex-start;
 }
 
+.span_path {
+  font-size: var(--font-size-s);
+  font-weight: var(--font-weight-regular);
+
+}
+
+.button {
+  background-color: unset;
+  border: none;
+  cursor: pointer;
+  padding-bottom: 5px;
+  padding-left: 0;
+  padding-top: 0;
+}
+
 .carts_block {
   display: flex;
   flex-wrap: wrap;
